# chip8-emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app.rc.in  resources.qrc  vcpkg.json
.github/workflows/: cd.yml  ci.yml
src/: main.cpp  version.h.in
src/emulator/: Constants.h  Emulator.cpp  Emulator.h
src/emulator/cpu/: Cpu.cpp  Cpu.h
src/emulator/display/: Display.cpp  Display.h
src/emulator/input/: InputWidget.cpp  InputWidget.h
src/emulator/memory/: Ram.cpp  Ram.h
tests/: DisplayTests.cpp  InputWidgetTests.cpp  RamTests.cpp  TestUtils.cpp  TestUtils.h  ram_tests.cpp
